<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/dashboardFragment"
        android:icon="@drawable/ic_dashboard"
        android:title="@string/dashboard" />
    
    <item
        android:id="@+id/budgetFragment"
        android:icon="@drawable/ic_budget"
        android:title="@string/budget" />
    
    <item
        android:id="@+id/arFinanceFragment"
        android:icon="@drawable/ic_ar_finance"
        android:title="@string/ar_finance" />
    
    <item
        android:id="@+id/aiAssistantFragment"
        android:icon="@drawable/ic_assistant"
        android:title="@string/ai_assistant" />
    
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile" />
</menu>
